<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/mobile_no"
        android:focusable="true"
        android:textColorHighlight="#ff7eff15"
        android:textColorHint="#dbdbdb"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:inputType="phone"
         />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:textColorHint="#dbdbdb"
        android:hint="@string/password"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
         />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_but1"
        android:id="@+id/button"
        android:layout_below="@+id/editText2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/selectable_button_bg"
        android:scaleType="fitXY"
        android:paddingTop="4sp"
        android:paddingBottom="4sp"
        android:paddingLeft="50sp"
        android:paddingRight="50sp"
        android:textColor="#FFFFFF" />


</RelativeLayout>
