<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".DriverNavBoard">



        <TextView
            android:id="@+id/orderRequest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:textColor="#000000"  />
        <TextView
            android:id="@+id/customerName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/orderRequest"
            android:layout_alignParentLeft="true"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="sans"
            android:textColor="#000000" />

      <!--  <TextView
            android:id="@+id/mobileNo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/customerName"
            android:textSize="15sp"
            android:typeface="sans"
            android:textColor="#000000" />
        -->

        <TextView
            android:id="@+id/pickupNavPointTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customerName"
            android:layout_alignParentLeft="true"
            android:textSize="15sp"
            android:typeface="sans"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/pickup_point"/>

        <TextView
            android:id="@+id/pickupNavPoint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pickupNavPointTxt"
            android:layout_alignParentLeft="true"
            android:textSize="15sp"
            android:typeface="sans"
            android:textColor="#000000" />
<!--
        <TextView
            android:id="@+id/dropNavPointTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pickupPoint"
            android:layout_alignParentLeft="true"
            android:textSize="15sp"
            android:typeface="sans"
            android:textStyle="bold"
            android:text="@string/drop_point"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/dropNavPoint"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dropNavPointTxt"
            android:layout_alignParentLeft="true"
            android:textSize="15sp"
            android:typeface="sans"
            android:textColor="#000000" />
-->


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pickupNavPoint"
        android:layout_above="@+id/mapDistanceTime"/>


    <TextView
        android:id="@+id/mapDistanceTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="sans"
        android:textColor="#000000"
        android:layout_above="@+id/pickupActivityBtn"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_pickup"
        android:id="@+id/pickupActivityBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/selectable_button_bg"
        android:scaleType="fitXY"
        android:paddingTop="4sp"
        android:paddingBottom="4sp"
        android:paddingLeft="50sp"
        android:paddingRight="50sp"
        android:textColor="#FFFFFF" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_photo"
        android:id="@+id/captureImageBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/selectable_button_bg"
        android:scaleType="fitXY"
        android:paddingTop="4sp"
        android:paddingBottom="4sp"
        android:paddingLeft="50sp"
        android:paddingRight="50sp"
        android:textColor="#FFFFFF"
        />

</RelativeLayout>
